--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ configurations {
 }
 
 dependencies {
+	compile('org.springframework:spring-oxm:3.0.0.RELEASE')
     compile('org.springframework.boot:spring-boot-starter-aop')
 	compile('org.springframework:spring-context-support:3.2.0.RELEASE')
     compile('org.springframework.boot:spring-boot-starter-jdbc')
